--- a/index.html
+++ b/index.html
@@ -2,73 +2,65 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Scanlist Market - Criar Conta</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#d40000">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="logo-white.png">
-
+  <title>Scanlist Market - Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    :root { --primary: #d40000; }
-    body { font-family: -apple-system, system-ui, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background-color: var(--primary); margin: 0; }
-    .register-card { background: white; padding: 35px; border-radius: 20px; width: 90%; max-width: 380px; text-align: center; box-shadow: 0 10px 25px rgba(0,0,0,0.2); }
-    .register-logo { width: 180px; margin-bottom: 20px; }
-    h2 { color: var(--primary); margin-bottom: 20px; font-size: 22px; }
-    input { width: 100%; padding: 14px; margin: 8px 0; border: 2px solid #eee; border-radius: 10px; box-sizing: border-box; font-size: 16px; text-align: center; }
-    input:focus { border-color: var(--primary); outline: none; }
-    .btn-register { width: 100%; padding: 16px; background-color: var(--primary); color: white; border: none; border-radius: 10px; cursor: pointer; font-weight: bold; font-size: 16px; margin-top: 15px; }
-    .switch { margin-top: 25px; font-size: 14px; color: #666; }
-    a { color: var(--primary); text-decoration: none; font-weight: bold; }
+    :root { --primary: #d40000; --bg: #f8f9fa; }
+    body { font-family: -apple-system, sans-serif; background: var(--bg); display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; }
+    .login-card { background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); width: 90%; max-width: 380px; text-align: center; }
+    .logo { width: 80px; margin-bottom: 20px; }
+    input { width: 100%; padding: 15px; margin-bottom: 15px; border: 2px solid #eee; border-radius: 12px; box-sizing: border-box; outline: none; font-size: 16px; }
+    .btn-login { background: var(--primary); color: white; border: none; padding: 15px; border-radius: 12px; width: 100%; font-weight: bold; cursor: pointer; font-size: 16px; }
+    .footer-links { margin-top: 20px; font-size: 14px; color: #666; }
+    .footer-links a { color: var(--primary); text-decoration: none; font-weight: bold; }
   </style>
 </head>
 <body>
-  <div class="register-card">
-    <img src="logo-white.png" class="register-logo" alt="Scanlist">
-    <h2>Criar Nova Conta</h2>
-    <input type="text" id="username" placeholder="Qual é o seu nome?">
-    <input type="email" id="email" placeholder="Seu melhor e-mail">
-    <input type="password" id="pass" placeholder="Crie uma senha">
-    <button class="btn-register" id="btnRegister">COMEÇAR A ECONOMIZAR</button>
-    <div class="switch">Já tem uma conta? <br><br> <a href="login.html">ENTRAR AGORA</a></div>
+
+  <div class="login-card">
+    <img src="logo-white.png" alt="Logo" class="logo" style="background: var(--primary); border-radius: 12px; padding: 5px;">
+    <h2 style="color: #333; margin-bottom: 5px;">Acesse sua Conta</h2>
+    <p style="color: #666; margin-bottom: 25px; font-size: 14px;">Controle seus gastos no mercado agora.</p>
+
+    <input type="email" id="email" placeholder="Seu e-mail">
+    <input type="password" id="password" placeholder="Sua senha">
+    <button class="btn-login" id="btnLogin">ENTRAR</button>
+
+    <div class="footer-links">
+      Não tem uma conta? <a href="signup.html">Cadastre-se aqui</a>
+    </div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
-    import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8",
-      authDomain: "scanlistmarket-30143.firebaseapp.com",
-      databaseURL: "https://scanlistmarket-30143-default-rtdb.firebaseio.com",
-      projectId: "scanlistmarket-30143",
-      storageBucket: "scanlistmarket-30143.appspot.com",
-      messagingSenderId: "428406265714",
-      appId: "1:428406265714:web:0a9d92dc1229458a3d6feb"
+    const firebaseConfig = { 
+        apiKey: "AIzaSyCtke_2T3e0HDDMqJsfJsRGs5KcKtN3Xe8", 
+        authDomain: "scanlistmarket-30143.firebaseapp.com", 
+        databaseURL: "https://scanlistmarket-30143-default-rtdb.firebaseio.com", 
+        projectId: "scanlistmarket-30143"
     };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getDatabase(app);
 
-    document.getElementById("btnRegister").onclick = async function() {
-      const username = document.getElementById("username").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const pass = document.getElementById("pass").value;
-      if (!username || !email || !pass) return alert("Por favor, preencha todos os dados!");
+    // Se já estiver logado, pula direto para o app
+    onAuthStateChanged(auth, (user) => {
+      if (user) window.location.href = "app.html";
+    });
+
+    document.getElementById("btnLogin").onclick = async () => {
+      const email = document.getElementById("email").value;
+      const pass = document.getElementById("password").value;
+
       try {
-        const userCredential = await createUserWithEmailAndPassword(auth, email, pass);
-        const user = userCredential.user;
-        await set(ref(db, 'users/' + user.uid), { username: username, email: email, totalCart: 0, createdAt: Date.now() });
+        await signInWithEmailAndPassword(auth, email, pass);
         window.location.href = "app.html";
-      } catch (error) { alert("Erro ao criar conta. Tente outro e-mail."); }
+      } catch (error) {
+        alert("Erro ao entrar: Verifique e-mail e senha.");
+      }
     };
-
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => { navigator.serviceWorker.register('./sw.js'); });
-    }
   </script>
 </body>
 </html>
